# joke

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2018-08-15-131959_create_user/: down.sql  up.sql
migrations/2018-08-15-132408_create_adjective/: down.sql  up.sql
migrations/2018-08-15-132416_create_user_adjective/: down.sql  up.sql
src/: main.rs
src/backend/: handler.rs  routes.rs
src/database/: connection.rs  dbimpl.rs  mod.rs  schema.rs
src/database/models/: adjective.rs  mod.rs  user.rs  user_adjective.rs
src/middleware/: display_data.rs  mod.rs  randomize.rs
static/: generate.js
static/spectre/: spectre.css
templates/: adjective.html.hbs  index.html.hbs  user.html.hbs
templates/common/: footer.hbs
templates/common/meta/: footer.hbs  header.hbs
templates/error/: 404.html.hbs
