[package]
name = "acvilon"
version = "0.1.0"
authors = ["gamak"]

[dependencies]
diesel =  { version = "1.3.2", features = ["postgres"] }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
rocket = "0.3.15"
rocket_codegen = "0.3.15"
rocket_contrib = { version = "0.3.15", features = ["handlebars_templates", "json"] }
dotenv = "0.13.0"
serde = "1.0.71"
serde_json = "1.0.26"
serde_derive = "1.0.71"
rand = "0.5.5"
failure = "0.1.2"
